--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ai-sdk/google": "^3.0.1",
+    "ai": "^6.0.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
