--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^3.0.1",
+    "@ai-sdk/react": "^3.0.3",
     "ai": "^6.0.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
